--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 	  right: 0;
 	  bottom: 0;
 	  left: 0;
-	  background: url('6.jpg') center 0 no-repeat;
+	  background: url('9.jpg') center 0 no-repeat;
 	  background-size: cover;
 	}
 	.main02 {
@@ -51,7 +51,7 @@
 	  right: 0;
 	  bottom: 0;
 	  left: 0;
-	  background: url('5.jpg') center 0 no-repeat;
+	  background: url('7.jpg') center 0 no-repeat;
 	  background-size: cover;
 	}
 	.main03 {
@@ -61,7 +61,7 @@
 	  right: 0;
 	  bottom: 0;
 	  left: 0;
-	  background: url('5.jpg') center 0 no-repeat;
+	  background: url('7.jpg') center 0 no-repeat;
 	  background-size: cover;
 	}
 	.main04 {
@@ -71,7 +71,7 @@
 	  right: 0;
 	  bottom: 0;
 	  left: 0;
-	  background: url('7.jpg') center 0 no-repeat;
+	  background: url('8.jpg') center 0 no-repeat;
 	  background-size: cover;
 	}
 
@@ -171,7 +171,7 @@
 	<div class='main03 ff'></div>
 	<div class='main04 ff'></div>
 	<div class=' fn-good'>
-		<p class='text-name'>化成了温柔的你<p/>
+		<p class='text-name'>送给化成了温柔的你<p/>
 		<p class='text-zhi'>致可爱的欣易</p>
 		<p class='text-content'>你的灵魂在升空</p>
 		<p class='text-content'>时间停止</p>
