--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 	<div class='main03 ff'></div>
 	<div class='main04 ff'></div>
 	<div class=' fn-good'>
-		<p class='text-name'>送给化成了温柔的你<p/>
+		<p class='text-name'>化成了温柔的你<p/>
 		<p class='text-zhi'>致可爱的欣易</p>
 		<p class='text-content'>你的灵魂在升空</p>
 		<p class='text-content'>时间停止</p>
@@ -243,6 +243,7 @@
 		<p class='text-content'>将是最美的长情</p>
 		<p class='text-content'>请带走</p>
 		<p class='text-content'>这世界的心跳</p>
+		<p class='text-content'>因为</p>
 		<p class='text-content'>大海里</p>
 		<p class='text-content'>将漫出满满的爱念</p>
 	</div>
