--- a/index.html
+++ b/index.html
@@ -237,15 +237,15 @@
 		<p class='text-content'>美的呼唤</p>
 		<p class='text-content'>漫天星辰</p>
 		<p class='text-content'>你成了最亮的一颗</p>
-		<p class='text-content'>点燃了</p>
+		<p class='text-content'>照亮了</p>
 		<p class='text-content'>黎明前夕的黑暗</p>
 		<p class='text-content'>陪伴</p>
 		<p class='text-content'>将是最美的长情</p>
 		<p class='text-content'>请带走</p>
 		<p class='text-content'>这世界的心跳</p>
 		<p class='text-content'>因为</p>
-		<p class='text-content'>大海里</p>
-		<p class='text-content'>将漫出满满的爱念</p>
+		<p class='text-content'>大海里 即将</p>
+		<p class='text-content'>漫出满满的爱念</p>
 	</div>
 
 <script>
